# LogicEdu

./: .cursorignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  alu.py  basics.py  blocks.py  cod6_fig4_17.py  demo.py  figure_4.17.py  figure_4.19.py  logic_gates.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: refactoring_demo.py
logicedu/: __init__.py
logicedu/components/: __init__.py  blocks.py  logic_gates.py
logicedu/core/: __init__.py  basics.py
logicedu/docs/: README.md
logicedu/examples/: __init__.py  basic_circuits.py  cod6_fig4_17.py  demo.py
logicedu/utils/: __init__.py  animation_helpers.py
manimlogic/: __init__.py
manimlogic/components/: __init__.py  logic_gates.py
manimlogic/core/: __init__.py  basics.py
manimlogic/docs/: README.md
manimlogic/examples/: __init__.py  basic_circuits.py  cod6_fig4_17.py  demo.py
manimlogic/utils/: __init__.py  animation_helpers.py
tests/: __init__.py  test_basics.py  test_bug_fixes.py
